logs/Slang/generated/hdlconv/hdlconvertor_p482.sv.log
name: hdlconvertor_p482
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:3:3: error: language feature not yet supported
  clocking cb_with_input @(posedge clk);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:10:3: error: language feature not yet supported
  clocking cb_without_input @(posedge clk);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:16:3: error: language feature not yet supported
  property p1;
  ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:20:3: error: language feature not yet supported
  property p2;
  ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:24:3: error: language feature not yet supported
  a1: assert property (p1);
  ^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:25:3: error: language feature not yet supported
  a2: assert property (cb_with_input.p1);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:26:3: error: language feature not yet supported
  a3: assert property (p2);
  ^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p482.sv:27:3: error: language feature not yet supported
  a4: assert property (cb_without_input.p1);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
